--- a/docs/api/migration-guides/v2-primitives.mdx
+++ b/docs/api/migration-guides/v2-primitives.mdx
@@ -4,13 +4,13 @@ description: Migrate from using the original primitives (Estimator and Sampler) 
 
 ---
 
-<Admonition type="warning">
-The first versions of primitives, i.e., [SamplerV1](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.SamplerV1) and [EstimatorV1](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.EstimatorV1), have been deprecated in `qiskit-ibm-runtime 0.23`.
-Their support will be removed no earlier than July 15, 2024.
-</Admonition>
-
 <span id="v2-primitives"></span>
 # Migrate to the Qiskit Runtime V2 primitives
+
+<Admonition type="warning">
+The original primitives (referred to as the V1 primitives), [V1 Sampler](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.SamplerV1) and [V1 Estimator](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.EstimatorV1), have been deprecated in `qiskit-ibm-runtime` 0.23.
+Their support will be removed no earlier than 15 August 2024.
+</Admonition>
 
 This guide describes what changed in the Qiskit Runtime V2 primitives (available with qiskit-ibm-runtime 0.21.0) and why, describes each new primitive in detail, and gives examples to help you migrate code from using the legacy primitives to the V2 primitives.  The examples in the guide all use the Qiskit Runtime primitives, but in general, the same changes apply to the other primitive implementations.  The functions unique to Qiskit Runtime such as error mitigation remain unique to Qiskit Runtime.
 
