Fix typo in Runtime save_account code

--- a/docs/api/migration-guides/qiskit-runtime-from-ibm-provider.mdx
+++ b/docs/api/migration-guides/qiskit-runtime-from-ibm-provider.mdx
@@ -24,7 +24,7 @@ from qiskit_ibm_runtime import QiskitRuntimeService
 
 # IBM Quantum channel; set to default
 
-QiskitRuntimeService.save_account(channel="ibm_quantum", token="<IQP_TOKEN>", overwrite=True, default=true)
+QiskitRuntimeService.save_account(channel="ibm_quantum", token="<IQP_TOKEN>", overwrite=True, set_as_default=True)
 ```
 
 Additionally, you can now name your saved credentials and load the credentials by name.
