--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -37,11 +37,11 @@ For more details on any of the topics covered in the blog, be sure to check [the
 
 *To see the release notes for all versions, visit the [Qiskit Runtime IBM Client release notes](/api/qiskit-ibm-runtime/release-notes).*
 
-**Highlights from the 0.25.0 (03 July 2024) version release**
+**Highlights from the 0.25.0 (2024-07-03) version release**
 
 #### Deprecation notes
 
-- The `optimization_level` option in EstimatorV2 is deprecated. Instead, you can perform circuit optimization using the [Qiskit transpiler](transpile) or [Qiskit transpiler service](qiskit-transpiler-service).
+- The `optimization_level` option in `EstimatorV2` is deprecated. Instead, you can perform circuit optimization using the [Qiskit transpiler](transpile) or [Qiskit transpiler service](qiskit-transpiler-service).
 - Interim results have been deprecated, including the [`interim_results()`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.RuntimeJobV2#interim_results) and [`stream_results()`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.RuntimeJobV2#stream_results) methods.
 
 #### New features
