--- a/docs/guides/primitives.mdx
+++ b/docs/guides/primitives.mdx
@@ -79,7 +79,7 @@ The updated interface uses a *primitive unified bloc* (PUB) for input.  Each PUB
 #### Estimator V1
 
 <Admonition type="warning">
-The [EstimatorV1](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.EstimatorV1) has been deprecated in `qiskit-ibm-runtime` 0.23.
+[EstimatorV1](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.EstimatorV1) has been deprecated in `qiskit-ibm-runtime` 0.23.
 Its support will be removed no earlier than 15 August 2024.
 [EstimatorV2](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.EstimatorV2) is highly recommended instead.
 </Admonition>
