Implement suggested changes from @frankharkins
Co-authored-by: Frank Harkins <frankharkins@hotmail.co.uk>

--- a/tutorials/compare-transpiler-settings/compare-transpiler-settings.ipynb
+++ b/tutorials/compare-transpiler-settings/compare-transpiler-settings.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "## Background\n",
     "\n",
-    "To ensure faster and more efficient results, as of 1 March 2024, circuits and observables need to be transformed to only use instructions supported by the system (referred to as instruction set architecture (ISA) circuits and observables) before being submitted to the Qiskit Runtime primitives.  One common way to do this is to use the transpiler's `generate_preset_pass_manager` function.  However, you might choose to follow a more manual process.\n",
+    "To ensure faster and more efficient results, as of 1 March 2024, circuits and observables need to be transformed to only use instructions supported by the system before being submitted to the Qiskit Runtime primitives. We call these _instruction set architecture_ (ISA) circuits and observables. One common way to do this is to use the transpiler's `generate_preset_pass_manager` function.  However, you might choose to follow a more manual process.\n",
     "\n",
     "For example, you might want to target a specific subset of qubits on a specific device. This tutorial tests the performance of different transpiler settings by completing the full process of creating, transpiling, and submitting circuits."
    ]
