--- a/docs/guides/represent-quantum-computers.ipynb
+++ b/docs/guides/represent-quantum-computers.ipynb
@@ -470,7 +470,7 @@
    "id": "f8b516be-805d-4d0b-92f9-44d3fbe3b51f",
    "metadata": {},
    "source": [
-    "Because error information was included, the `VF2PostLayout` pass tries to find the optimal qubits to use, resulting in the same circuit that was originally found with the same physical qubits."
+    "Because the target includes error information, the `VF2PostLayout` pass tries to find the optimal qubits to use, resulting in the same circuit that was originally found with the same physical qubits."
    ]
   },
   {
