put back optimization level = 1

--- a/docs/guides/represent-quantum-computers.ipynb
+++ b/docs/guides/represent-quantum-computers.ipynb
@@ -113,7 +113,7 @@
     "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
     "\n",
     "pass_manager = generate_preset_pass_manager(\n",
-    "    target=target, seed_transpiler=12345\n",
+    "    optimization_level=1, target=target, seed_transpiler=12345\n",
     ")\n",
     "qc_t_target = pass_manager.run(qc)\n",
     "qc_t_target.draw(\"mpl\", idle_wires=False, fold=-1)"
