--- a/docs/guides/get-started-with-primitives.mdx
+++ b/docs/guides/get-started-with-primitives.mdx
@@ -297,4 +297,6 @@ sampler = BackendSampler(backend)
     - Practice with primitives by working through the [Cost function lesson](https://learning.quantum.ibm.com/course/variational-algorithm-design/cost-functions#primitives) in IBM Quantum Learning.
     - Learn how to transpile locally in the [Transpile](./transpile) section.
     - Try the [Submit pre-transpiled circuits](https://learning.quantum.ibm.com/tutorial/submitting-user-transpiled-circuits-using-primitives) tutorial.
+    - Learn how to [use the primitive options.](runtime-options-overview)
+    - View the API for [Sampler](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.SamplerOptions) and [Estimator](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.EstimatorOptions) options.
 </Admonition>
