--- a/docs/responsible-quantum-computing.mdx
+++ b/docs/responsible-quantum-computing.mdx
@@ -1,6 +1,55 @@
 ---
-title: Responsible quantum computing
-description: TODO - filler text so that the SEO check doesn't complain!
+title: Responsible quantum computing and inclusive tech
+description: A review of the Responsible Quantum Principles at IBM, and how to report a Responsible Quantum Issue
+
 ---
 
-# Responsible quantum computing
+# Responsible quantum computing and inclusive tech
+
+Quantum technology has the potential to accelerate use cases and even solve problems that were previously inaccessible. But how will this new computing power impact society at large? This requires us to be thoughtful — we must research and develop responsibly. 
+
+Our mission statement at IBM is to be “the catalyst to make the world work better,” and IBM Quantum runs a Responsible Quantum Initiative in order to ensure that our development is in line with that mission. 
+
+We define Responsible Quantum Computing as quantum computing that’s aware of its effects. As part of this effort, we crafted five Responsible Quantum Principles for developing and deploying quantum technology that our team follows internally. 
+
+**1. Make a positive societal impact.**
+
+We are developing a new form of technology. We are doing so because IBM is the catalyst to make the world work better. Therefore, quantum computing, too, should make the world work better by prioritizing use cases that make a positive societal impact.
+
+**2. Explore use cases with foresight.**
+
+Developing a new technology means we may unlock use cases or algorithms that never existed before. We must be prepared for unintended impacts to use cases that seem positive.
+
+**3. Promote our products accurately.**
+
+As innovators, it is our responsibility to ensure that the world is aware of quantum’s promise, its limitations, and the expected development timeline.
+
+**4. Make consistent principled decisions.**
+
+It is the responsibility of IBM Quantum employees and IBM Quantum leadership alike to uphold these principles. Where decisions come in conflict with these principles, it is the responsibility of leadership to make decisions consistently.
+
+**5. Build a diverse and inclusive quantum community.**
+
+IBM Quantum is building a global quantum computing ecosystem. It is our responsibility to create an ecosystem that represents the diversity of the world at large, and be inclusive of people of all backgrounds, experiences, and abilities.
+
+We also have several tools to ensure that our products are used responsibly as well. We monitor responses to this [Responsible Quantum Issue Report form](https://airtable.com/app1Nb37drhJb4ljK/shrHQJBat48X3WmfA) where you can flag any potential concerns about a quantum computing application or use case. Furthermore, in the end user agreement, please take note of two sections, which describe acceptable and responsible uses of IBM Quantum technology and services. 
+
+    *5.2 Acceptable Use*
+
+    For the avoidance of doubt, all Acceptable Use Terms in the base agreement apply to IBM Quantum Service. In addition, Client agrees that it will not use, or make available for use by any entity, the IBM Quantum Premium Plan service for: (i) the research, design, development, production, maintenance, repair, overhaul, or use of any offensive or defensive weapons of any kind; (ii) attempting to defeat encryption; or, (iii) processing regulated data including personal information, financial data and health data. Any violation of these prohibitions may lead to the immediate termination of the service in accordance with Termination provisions of the base agreement.
+
+    *5.3 Responsible Use*
+
+    Quantum computing is an emerging technology with continuously evolving applications. Therefore, IBM reserves the right to review applications produced with this technology, and reconsider access to the IBM Quantum Premium Plan service if these applications are not deemed a responsible use of IBM Quantum technology.
+
+Finally, as part of our responsible quantum effort, we are committed to fostering a welcoming community of users, both online and at in-person engagements. Please also familiarize yourself with the Qiskit Code of Conduct and Code of Conduct enforcement procedures.
+
+https://github.com/Qiskit/qiskit/blob/main/CODE_OF_CONDUCT.md
+
+## Learn more
+
+<Admonition type="tip" title="Recommendations">
+    - [IBM Quantum Safe](https://www.ibm.com/quantum/quantum-safe)
+    - [IBM Quantum Responsible Quantum Computing](https://www.ibm.com/quantum/blog/responsible-quantum)
+    - [IBM Research Responsible & Inclusive Tech](https://research.ibm.com/projects/responsible-and-inclusive-tech-research)
+</Admonition>
