--- a/docs/responsible-quantum-computing.mdx
+++ b/docs/responsible-quantum-computing.mdx
@@ -32,7 +32,7 @@ It is the responsibility of IBM Quantum employees and IBM Quantum leadership ali
 
 IBM Quantum is building a global quantum computing ecosystem. It is our responsibility to create an ecosystem that represents the diversity of the world at large, and be inclusive of people of all backgrounds, experiences, and abilities.
 
-We also have several tools to ensure that our products are used responsibly as well. We monitor responses to this [Responsible Quantum Issue Report form](https://airtable.com/app1Nb37drhJb4ljK/shrHQJBat48X3WmfA) where you can flag any potential concerns about a quantum computing application or use case. Furthermore, in the end user agreement, please take note of two sections, which describe acceptable and responsible uses of IBM Quantum technology and services. 
+We have several tools to ensure that our products are used responsibly as well. We monitor responses to this [Responsible Quantum Issue Report form](https://airtable.com/app1Nb37drhJb4ljK/shrHQJBat48X3WmfA) where you can flag any potential concerns about a quantum computing application or use case. Furthermore, in the end user agreement, please take note of two sections, which describe acceptable and responsible uses of IBM Quantum technology and services. 
 
 >    *5.2 Acceptable Use*
 
@@ -42,12 +42,10 @@ We also have several tools to ensure that our products are used responsibly as w
 
 >    Quantum computing is an emerging technology with continuously evolving applications. Therefore, IBM reserves the right to review applications produced with this technology, and reconsider access to the IBM Quantum Premium Plan service if these applications are not deemed a responsible use of IBM Quantum technology.
 
-Finally, as part of our responsible quantum effort, we are committed to fostering a welcoming community of users, both online and at in-person engagements. Please also familiarize yourself with the [Qiskit Code of Conduct](https://github.com/Qiskit/qiskit/blob/main/CODE_OF_CONDUCT.md) and its [enforcement procedures](https://github.com/Qiskit/qiskit/blob/main/CODE_OF_CONDUCT.md#responsibilities--enforcement).
+Finally, as part of our responsible quantum effort, we are committed to fostering a welcoming community of users, both online and at in-person engagements. Please familiarize yourself with the [Qiskit Code of Conduct](https://github.com/Qiskit/qiskit/blob/main/CODE_OF_CONDUCT.md) and its [enforcement procedures](https://github.com/Qiskit/qiskit/blob/main/CODE_OF_CONDUCT.md#responsibilities--enforcement).
 
-## Learn more
-
-<Admonition type="tip" title="Recommendations">
+<Admonition type="tip" title="Learn more">
     - [IBM Quantum Safe](https://www.ibm.com/quantum/quantum-safe)
-    - [IBM Quantum Responsible Quantum Computing](https://www.ibm.com/quantum/blog/responsible-quantum)
-    - [IBM Research Responsible & Inclusive Tech](https://research.ibm.com/projects/responsible-and-inclusive-tech-research)
+    - [Blog: The era of quantum utility must also be the era of responsible quantum computing](https://www.ibm.com/quantum/blog/responsible-quantum)
+    - [IBM Research Responsible and Inclusive Tech](https://research.ibm.com/projects/responsible-and-inclusive-tech-research)
 </Admonition>
