--- a/docs/responsible-quantum-computing.mdx
+++ b/docs/responsible-quantum-computing.mdx
@@ -32,15 +32,13 @@ It is the responsibility of IBM Quantum employees and IBM Quantum leadership ali
 
 IBM Quantum is building a global quantum computing ecosystem. It is our responsibility to create an ecosystem that represents the diversity of the world at large, and be inclusive of people of all backgrounds, experiences, and abilities.
 
-We have several tools to ensure that our products are used responsibly as well. We monitor responses to this [Responsible Quantum Issue Report form](https://airtable.com/app1Nb37drhJb4ljK/shrHQJBat48X3WmfA) where you can flag any potential concerns about a quantum computing application or use case. Furthermore, in the end user agreement, please take note of two sections, which describe acceptable and responsible uses of IBM Quantum technology and services. 
+We have several tools to ensure that our products are used responsibly as well. We monitor responses to this [Responsible Quantum Issue Report form](https://airtable.com/app1Nb37drhJb4ljK/shrHQJBat48X3WmfA) where you can flag any potential concerns about a quantum computing application or use case. Furthermore, in the [IBM Quantum End User Agreement](https://quantum.ibm.com/terms), please take note of three sections, which describe acceptable and responsible uses of IBM Quantum technology and services. 
 
->    *5.2 Acceptable Use*
-
->   For the avoidance of doubt, all Acceptable Use Terms in the base agreement apply to IBM Quantum Service. In addition, Client agrees that it will not use, or make available for use by any entity, the IBM Quantum Premium Plan service for: (i) the research, design, development, production, maintenance, repair, overhaul, or use of any offensive or defensive weapons of any kind; (ii) attempting to defeat encryption; or, (iii) processing regulated data including personal information, financial data and health data. Any violation of these prohibitions may lead to the immediate termination of the service in accordance with Termination provisions of the base agreement.
-
->    *5.3 Responsible Use*
-
->    Quantum computing is an emerging technology with continuously evolving applications. Therefore, IBM reserves the right to review applications produced with this technology, and reconsider access to the IBM Quantum Premium Plan service if these applications are not deemed a responsible use of IBM Quantum technology.
+> **9.b** *IBM Quantum may not be used for unlawful, obscene, offensive or fraudulent activity, such as advocating or causing harm, interfering with or violating the integrity or security of a network or system, evading filters, sending unsolicited, abusive, deceptive or disparaging messages, viruses or harmful code, violating third party rights, for the research, design, development, production, maintenance, repair, overhaul, or use of any offensive or defensive weapons of any kind, for attempting to defeat encryption, or for processing regulated data including personal information, financial data and health data. In addition, IBM may remove or refuse to accept or use any Content without limitation.*
+>
+> **9.c** *You may not reverse engineer or otherwise attempt to discover or decode any hardware component of IBM Quantum.*
+>
+> **9.d** *You may not use IBM Quantum in any application or situation where failure could lead to death or serious bodily injury of any person, or to severe physical or environmental damage, such as aircraft, motor vehicles or mass transport, nuclear or chemical facilities, life support or medical equipment, or weaponry systems.*
 
 Finally, as part of our responsible quantum effort, we are committed to fostering a welcoming community of users, both online and at in-person engagements. Please familiarize yourself with the [Qiskit Code of Conduct](https://github.com/Qiskit/qiskit/blob/main/CODE_OF_CONDUCT.md) and its [enforcement procedures](https://github.com/Qiskit/qiskit/blob/main/CODE_OF_CONDUCT.md#responsibilities--enforcement).
 
