--- a/docs/responsible-quantum-computing.mdx
+++ b/docs/responsible-quantum-computing.mdx
@@ -40,7 +40,7 @@ We have several tools to ensure that our products are used responsibly as well. 
 >
 > **9.d** *You may not use IBM Quantum in any application or situation where failure could lead to death or serious bodily injury of any person, or to severe physical or environmental damage, such as aircraft, motor vehicles or mass transport, nuclear or chemical facilities, life support or medical equipment, or weaponry systems.*
 
-Finally, as part of our responsible quantum effort, we are committed to fostering a welcoming community of users, both online and at in-person engagements. Please familiarize yourself with the [Qiskit Code of Conduct](https://github.com/Qiskit/qiskit/blob/main/CODE_OF_CONDUCT.md) and its [enforcement procedures](https://github.com/Qiskit/qiskit/blob/main/CODE_OF_CONDUCT.md#responsibilities--enforcement).
+Finally, as part of our responsible quantum effort, we are committed to fostering a welcoming community of users, both online and at in-person engagements. Please familiarize yourself with the [Qiskit Code of Conduct](/open-source/code-of-conduct) and its [enforcement procedures](/open-source/code-of-conduct#responsibilities-enforcement).
 
 <Admonition type="tip" title="Learn more">
     - [IBM Quantum Safe](https://www.ibm.com/quantum/quantum-safe)
