--- a/docs/open-source/qiskit-sdk-version-strategy.mdx
+++ b/docs/open-source/qiskit-sdk-version-strategy.mdx
@@ -130,3 +130,6 @@ release had some issue with the sdist package publishing, and a post-release
 0.25.2.1 was published that corrected this issue. The code was identical, and
 0.25.2.1 only fixed the packaging issue for the release.
 
+## How contributors can mark deprecations
+
+Refer to the [deprecation guide](https://github.com/Qiskit/qiskit/blob/main/DEPRECATION.md) in the Qiskit SDK repository for instructions on how to add deprecations to the source code.
